--- a/Product.wxs
+++ b/Product.wxs
@@ -7,4 +7,13 @@
     </Feature>
     <MediaTemplate EmbedCab="yes" />
   </Product>
+  <Fragment>
+    <Directory Id="TARGETDIR" Name="SourceDir">
+      <Directory Id="ProgramFilesFolder">
+        <Directory Id="ManufacturerFolder" Name="!(bind.property.Manufacturer)">
+          <Directory Id="INSTALLFOLDER" Name="!(bind.property.ProductName)"></Directory>
+        </Directory>
+      </Directory>
+    </Directory>
+  </Fragment>
 </Wix>
